refactored all controlers and services