@@ -1,13 +1,16 @@
 package com.ilario.sparkmart.services.implementations;
 
 import com.ilario.sparkmart.dto.*;
+import com.ilario.sparkmart.exceptions.orderProducts.OrderProductNotFoundException;
+import com.ilario.sparkmart.exceptions.orderProducts.OrderProductsNotFoundException;
+import com.ilario.sparkmart.exceptions.orders.OrderNotFoundException;
+import com.ilario.sparkmart.exceptions.products.ProductNotFoundException;
 import com.ilario.sparkmart.exceptions.users.UserNotFoundException;
 import com.ilario.sparkmart.mappers.OrderMapper;
 import com.ilario.sparkmart.mappers.ProductMapper;
 import com.ilario.sparkmart.models.Order;
 import com.ilario.sparkmart.models.OrderProduct;
 import com.ilario.sparkmart.models.Product;
-import com.ilario.sparkmart.models.WishlistProduct;
 import com.ilario.sparkmart.repositories.*;
 import com.ilario.sparkmart.security.misc.enums.OrderStatus;
 import com.ilario.sparkmart.services.IOrderService;
@@ -16,6 +19,7 @@ import org.springframework.stereotype.Service;
 
 import java.beans.Transient;
 import java.util.*;
+import java.util.stream.Collectors;
 
 @Service
 public class OrderServiceImpl implements IOrderService {
@@ -39,9 +43,9 @@ public class OrderServiceImpl implements IOrderService {
     }
 
     @Override
-    public OrderDTO getById(UUID uuid) {
-        var order = orderRepository.findById(uuid);
-        return order.map(orderMapper::toOrderDTO).orElse(null);
+    public OrderDTO getById(UUID uuid) throws OrderNotFoundException {
+        var order = orderRepository.findById(uuid).orElseThrow(() -> new OrderNotFoundException("ERROR: Order by given ID not found."));
+        return orderMapper.toOrderDTO(order);
     }
 
     @Override
@@ -52,27 +56,28 @@ public class OrderServiceImpl implements IOrderService {
                 .orElseThrow(() -> new UserNotFoundException("User not found"));
         for (var productJSON : purchaseDTO.products().entrySet()) {
             var product = productRepository.findById(productJSON.getKey());
-            if(product.isEmpty()) {
-                return;
-            }
-            products.add(product.get());
+            product.ifPresent(products::add);
         }
-        var order = new Order();
-        order.setOrderNO("ORDER: " + (orderRepository.getTotalAmountOfOrdersByUser(user) + 1));
         var total = products.stream()
                 .mapToDouble(Product::getPrice)
                 .sum();
-        order.setTotal(total);
-        order.setUser(user);
+        var order = Order
+                .builder()
+                .orderNO("ORDER: " + (orderRepository.getTotalAmountOfOrdersByUser(user) + 1))
+                .total(total)
+                .user(user)
+                .build();
         user.getOrders().add(order);
         for(var product: products) {
-            var orderProduct = new OrderProduct();
             var wishlistProduct = wishlistProductRepository.findWishlistProductByWishlistAndProduct(user.getWishlist(), product);
             wishlistProduct.ifPresent(wishlistProductRepository::delete);
             product.setQuantity(product.getQuantity() - purchaseDTO.products().get(product.getId()));
-            orderProduct.setOrder(order);
-            orderProduct.setProduct(product);
-            orderProduct.setQuantity(purchaseDTO.products().get(product.getId()));
+            var orderProduct = OrderProduct
+                    .builder()
+                    .order(order)
+                    .product(product)
+                    .quantity(purchaseDTO.products().get(product.getId()))
+                    .build();
             product.getOrders().add(orderProduct);
             order.getProducts().add(orderProduct);
             orderProductRepository.save(orderProduct);
@@ -81,113 +86,88 @@ public class OrderServiceImpl implements IOrderService {
     }
 
     @Override
-    public void changeOrderStatus(UUID orderId) {
-        var order = orderRepository.findById(orderId);
-        if(order.isEmpty()) {
-            return;
+    public void changeOrderStatus(UUID orderId) throws OrderNotFoundException {
+        var order = orderRepository
+                .findById(orderId)
+                .orElseThrow(() -> new OrderNotFoundException("ERROR: Order not found by given ID."));
+        switch (order.getOrderStatus()) {
+            case PENDING -> order.setOrderStatus(OrderStatus.PROCESSING);
+            case PROCESSING -> order.setOrderStatus(OrderStatus.SHIPPED);
         }
-        switch (order.get().getOrderStatus()) {
-            case PENDING -> order.get().setOrderStatus(OrderStatus.PROCESSING);
-            case PROCESSING -> order.get().setOrderStatus(OrderStatus.SHIPPED);
-        }
-        orderRepository.save(order.get());
+        orderRepository.save(order);
     }
 
     @Override
-    public void changeOrderProductStatus(UUID orderId, UUID productId) {
-        var order = orderRepository.findById(orderId);
-        var product = productRepository.findById(productId);
-        if(order.isEmpty() || product.isEmpty()) {
-            return;
+    public void changeOrderProductStatus(UUID orderProductID) throws OrderProductNotFoundException, OrderProductsNotFoundException {
+        var orderProduct = orderProductRepository
+                .findById(orderProductID)
+                .orElseThrow(() -> new OrderProductNotFoundException("ERROR: Order product by given ID not found."));
+        var order = orderProduct.getOrder();
+        orderProduct.setIsDelivered(true);
+        orderProductRepository.save(orderProduct);
+        var allOrderProducts = orderProductRepository.getAllProductsByOrder(order);
+        if(allOrderProducts.isEmpty()) {
+            throw new OrderProductsNotFoundException("ERROR: OrderProducts by given Order ID were not found.");
         }
-        var orderProduct = orderProductRepository.getOrderProductByOrderAndProduct(order.get(), product.get());
-        if(orderProduct.isEmpty()) {
-            return;
-        }
-        orderProduct.get().setIsDelivered(true);
-        orderProductRepository.save(orderProduct.get());
-        var allOrderProducts = orderProductRepository.getAllProductsByOrder(order.get());
-        boolean flag = true;
-        for(var item: allOrderProducts) {
-            if(!item.getIsDelivered()) {
-                flag = false;
-                break;
-            }
-        }
-        if(flag) {
-            order.get().setOrderStatus(OrderStatus.DELIVERED);
-            order.get().setIsComplete(true);
-            orderRepository.save(order.get());
+        var allDelivered = allOrderProducts
+                .stream()
+                .allMatch(OrderProduct::getIsDelivered);
+        if (allDelivered) {
+            order.setOrderStatus(OrderStatus.DELIVERED);
+            order.setIsComplete(true);
+            orderRepository.save(order);
         }
     }
 
     @Override
-    public Order getLastOrder() {
-        var orders = orderRepository.findAll().stream().sorted(Comparator.comparing(Order::getCreatedAt)).toList();
-        if(orders.isEmpty()) {
-            return new Order();
-        }
-        return orders.get(orders.size() - 1);
+    public List<OrderProductDTO> getAllProductsByOrder(UUID orderId) throws OrderNotFoundException {
+        var order = orderRepository.findById(orderId).orElseThrow(() -> new OrderNotFoundException("ERROR: Order by given ID not found."));
+        var products = orderProductRepository.getAllProductsByOrder(order);
+        return products.isEmpty()
+                ? new ArrayList<>()
+                : products.stream().map(orderMapper::toOrderProductDTO).collect(Collectors.toList());
     }
 
     @Override
-    public Optional<OrderProduct> getOrderProductByID(UUID id) {
-        return orderProductRepository.findById(id);
-    }
-
-    @Override
-    public List<OrderProductDTO> getAllProductsByOrder(UUID orderId) {
-        var order = orderRepository.findById(orderId);
-        if(order.isEmpty()) {
-            return new ArrayList<>();
-        }
-        var products = orderProductRepository.getAllProductsByOrder(order.get());
-        return products.stream().map(orderMapper::toOrderProductDTO).toList();
-    }
-
-    @Override
-    public Page<OrderDTO> getAllOrdersByUser(UUID userId, int page, int pageSize, String sortBy, String sortDir) {
-        Pageable pageable = PageRequest.of(
+    public Page<OrderDTO> getAllOrdersByUser(UUID userId, int page, int pageSize, String sortBy, String sortDir) throws UserNotFoundException {
+        var pageable = PageRequest.of(
                 page,
                 pageSize,
                 sortDir.equalsIgnoreCase("asc") ? Sort.by(sortBy).ascending() : Sort.by(sortBy).descending());
-        var user = userRepository.findById(userId);
-        if(user.isEmpty()) {
-            return new PageImpl<>(new ArrayList<>(), pageable, 0);
-        }
-        Page<Order> pageResult = orderRepository.getAllOrdersByUser(user.get(), pageable);
+        var user = userRepository
+                .findById(userId)
+                .orElseThrow(() -> new UserNotFoundException("ERROR: User by given ID not found."));
+        var pageResult = orderRepository.getAllOrdersByUser(user, pageable);
         var ordersDTO = pageResult
                 .stream()
                 .map(orderMapper::toOrderDTO)
-                .toList();
+                .collect(Collectors.toList());
         return new PageImpl<>(ordersDTO, pageable, pageResult.getTotalElements());
     }
 
     @Override
-    public Page<DisplayProductDTO> getAllWishlistsByUser(UUID userId, int page, int pageSize) {
-        Pageable pageable = PageRequest.of(
+    public Page<DisplayProductDTO> getAllWishlistsByUser(UUID userId, int page, int pageSize) throws UserNotFoundException {
+        var pageable = PageRequest.of(
                 page,
                 pageSize);
-        var user = userRepository.findById(userId);
-        if(user.isEmpty()) {
-            return new PageImpl<>(new ArrayList<>(), pageable, 0);
-        }
-        Page<WishlistProduct> pageResult= wishlistProductRepository.getAllWishlistsByUser(user.get().getWishlist(), pageable);
+        var user = userRepository.
+                findById(userId)
+                .orElseThrow(() -> new UserNotFoundException("ERROR: User not found by given ID."));
+        var pageResult= wishlistProductRepository.getAllWishlistsByUser(user.getWishlist(), pageable);
         var productsDTO = pageResult
                 .stream()
                 .map(x-> productMapper.toDisplayProductDTO(x.getProduct()))
-                .toList();
+                .collect(Collectors.toList());
         return new PageImpl<>(productsDTO, pageable, pageResult.getTotalElements());
     }
 
     @Override
-    public ProductStatisticsDTO getProductStatistics(UUID productId) {
-        var product = productRepository.findById(productId);
-        if(product.isEmpty()) {
-            return new ProductStatisticsDTO(0,0, 0);
-        }
-        var totalSold = orderProductRepository.getTotalSoldFromProduct(product.get());
-        var totalProfit = (int)(totalSold * product.get().getPrice());
-        return new ProductStatisticsDTO(product.get().getQuantity(), totalSold, totalProfit);
+    public ProductStatisticsDTO getProductStatistics(UUID productId) throws ProductNotFoundException {
+        var product = productRepository
+                .findById(productId)
+                .orElseThrow(() -> new ProductNotFoundException("ERROR: Product by given ID not found."));
+        var totalSold = orderProductRepository.getTotalSoldFromProduct(product);
+        var totalProfit = (int)(totalSold * product.getPrice());
+        return new ProductStatisticsDTO(product.getQuantity(), totalSold, totalProfit);
     }
 }
